--- a/NsimMediator/emds.NsimMediator.csproj
+++ b/NsimMediator/emds.NsimMediator.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="OwlDotNetApi">
+      <HintPath>..\lib\OwlDotNetApi.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
