--- a/emds.TrainLogger/emds.TrainLoggers.csproj
+++ b/emds.TrainLogger/emds.TrainLoggers.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{414DB410-1B9E-4A44-A054-3D9CD2753CEA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>emds.TrainLogger</RootNamespace>
-    <AssemblyName>emds.TrainLogger</AssemblyName>
+    <RootNamespace>emds.TrainLoggers</RootNamespace>
+    <AssemblyName>emds.TrainLoggers</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -37,6 +37,15 @@
     <AssemblyOriginatorKeyFile>keyForEmds.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MindFusion.Diagramming.Wpf">
+      <HintPath>..\lib\MindFusion.Diagramming.Wpf.dll</HintPath>
+    </Reference>
+    <Reference Include="MindFusion.Graphs">
+      <HintPath>..\lib\MindFusion.Graphs.dll</HintPath>
+    </Reference>
+    <Reference Include="MindFusion.Scripting">
+      <HintPath>..\lib\MindFusion.Scripting.dll</HintPath>
+    </Reference>
     <Reference Include="MongoDB.Bson">
       <HintPath>..\packages\mongocsharpdriver.1.8.0\lib\net35\MongoDB.Bson.dll</HintPath>
     </Reference>
@@ -52,8 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\InitEvent.cs" />
+    <Compile Include="Models\Iteration.cs" />
+    <Compile Include="Models\ProcessPair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrainLogger.cs" />
+    <Compile Include="TrainLogRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="keyForEmds.pfx" />
