--- a/emds.ViewTrainLog/emds.ViewTrainLog.csproj
+++ b/emds.ViewTrainLog/emds.ViewTrainLog.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FE27F43B-2283-4391-9980-E315C76A7EBE}</ProjectGuid>
+    <ProjectGuid>{58791B49-8339-45D3-B064-AE03BC9BBCCA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>emds.ViewTrainLog</RootNamespace>
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -23,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,10 +34,29 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MDS.Common">
+      <HintPath>..\lib\MDS.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="MDS.FillForm.DomainModel">
+      <HintPath>..\lib\MDS.FillForm.DomainModel.dll</HintPath>
+    </Reference>
+    <Reference Include="mindfusion.diagramming.wpf">
+      <HintPath>..\..\..\..\..\..\..\program files (x86)\mindfusion\mindfusion.diagramming for wpf (trial version)\clr4 (.net 4.0 and .net 4.5)\mindfusion.diagramming.wpf.dll</HintPath>
+    </Reference>
+    <Reference Include="MindFusion.Graphs">
+      <HintPath>..\..\..\..\..\..\..\program files (x86)\mindfusion\mindfusion.diagramming for wpf (trial version)\clr4 (.net 4.0 and .net 4.5)\MindFusion.Graphs.dll</HintPath>
+    </Reference>
+    <Reference Include="MindFusion.Scripting">
+      <HintPath>..\..\..\..\..\..\..\program files (x86)\mindfusion\mindfusion.diagramming for wpf (trial version)\clr4 (.net 4.0 and .net 4.5)\MindFusion.Scripting.dll</HintPath>
+    </Reference>
+    <Reference Include="ReachFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Printing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -61,6 +82,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DiagramHelper.cs" />
+    <Compile Include="ListBoxItemWidthConverter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -80,6 +103,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Properties\Licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -92,6 +116,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\emds.common\emds.common.csproj">
+      <Project>{75621124-1cbd-49c6-9a85-898a8dbf05fc}</Project>
+      <Name>emds.common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\emds.TrainLogger\emds.TrainLoggers.csproj">
+      <Project>{414db410-1b9e-4a44-a054-3d9cd2753cea}</Project>
+      <Name>emds.TrainLoggers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\encog-core-cs\encog-core-cs.csproj">
+      <Project>{ac6fadf9-0904-4ebd-b22c-1c787c7e7a95}</Project>
+      <Name>encog-core-cs</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
