Блокировка создания связей и нодов. Добавление конфигураций для монги. Хэлпер для конфигов.

--- a/emds.ViewTrainLog/App.config
+++ b/emds.ViewTrainLog/App.config
@@ -3,4 +3,12 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+  <appSettings>
+    <add key="mongoDBConnect" value="mongodb://localhost"/>
+    
+    <!--<add key ="mongoDBConnect" value="mongodb://neismit:6nC@CZI4rpN*K4M@ds059947.mongolab.com:59947" />-->
+    <!--<add key ="mongoDBConnect" value="mongodb://admin:6nC@CZI4rpN*K4M@ds059947.mongolab.com:59947" />-->
+    <add key ="dbName" value="emdsdb"/>
+    <add key ="collectionName" value="NeuralTrainLog"/>
+  </appSettings>
 </configuration>
