--- a/emds.common/emds.common.csproj
+++ b/emds.common/emds.common.csproj
@@ -43,6 +43,7 @@
       <HintPath>..\packages\mongocsharpdriver.1.8.0\lib\net35\MongoDB.Driver.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppConfigHelper.cs" />
     <Compile Include="CryptoHelpers.cs" />
     <Compile Include="FileLogger.cs" />
     <Compile Include="Models\DataProcessorConf.cs" />
