Выделение нодов и связей на диаграммах. Начало работы с онтологией (не понимает кириллицу?)

--- a/emds.Ontology/emds.Ontology.csproj
+++ b/emds.Ontology/emds.Ontology.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="OwlDotNetApi">
+      <HintPath>..\lib\OwlDotNetApi.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,8 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="OntologyHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\emds.common\emds.common.csproj">
+      <Project>{75621124-1cbd-49c6-9a85-898a8dbf05fc}</Project>
+      <Name>emds.common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
