--- a/emds.ViewTrainLog/App.config
+++ b/emds.ViewTrainLog/App.config
@@ -10,5 +10,7 @@
     <!--<add key ="mongoDBConnect" value="mongodb://admin:6nC@CZI4rpN*K4M@ds059947.mongolab.com:59947" />-->
     <add key ="dbName" value="emdsdb"/>
     <add key ="collectionName" value="NeuralTrainLog"/>
+    <add key ="NeuralNetFolder" value="..\..\..\NeuralNetworks"/>
+    <add key ="OntologyPath" value="..\..\..\OntoMag.owl"/>
   </appSettings>
 </configuration>
